Deploy wercker step

--- a/wercker.yml
+++ b/wercker.yml
@@ -1,4 +1,15 @@
-box: wercker/default
+# wercker.yml
+box: debian:stable-slim
 build:
   steps:
-    - validate-wercker-step
+    - shellcheck:
+        files: run.sh
+
+    - script:
+        name: prepare output
+        code: rm -rf $WERCKER_ROOT/.git
+
+publish:
+  steps:
+    - internal/publish-step:
+        owner: shigemk2
