--- a/step.yml
+++ b/step.yml
@@ -6,31 +6,31 @@ keywords:
   - ecs
 properties:
   # Step 1: Configuring AWS
-  key:
-    type: string
-    required: true
-  secret:
-    type: string
-    required: true
-  region:
-    type: string
-    required: false
+  - key:
+      type: string
+      required: true
+  - secret:
+      type: string
+      required: true
+  - region:
+      type: string
+      required: false
 
   # Step 2: Defining task definition
-  task-definition-name:
-    type: string
-    required: true
-  task-definition-file:
-    type: string
-    required: true
-  task-definition-volumes-file:
-    type: string
-    required: false
+  - task-definition-name:
+      type: string
+      required: true
+  - task-definition-file:
+      type: string
+      required: true
+  - task-definition-volumes-file:
+      type: string
+      required: false
 
   # Step 3: Defining service (optional)
-  cluster-name:
-    type: string
-    required: false
-  service-name:
-    type: string
-    required: false
+  - cluster-name:
+      type: string
+      required: false
+  - service-name:
+      type: string
+      required: false
