--- a/step.yml
+++ b/step.yml
@@ -1,7 +1,7 @@
 name: aws-ecs
-version: 1.18.0
-description: Deploy service to ECS
-keywords:
+version: 2.0.0
+summary: Deploy service to ECS
+tags:
   - aws
   - ecs
 properties:
