--- a/wercker.yml
+++ b/wercker.yml
@@ -8,8 +8,22 @@ build:
     - script:
         name: prepare output
         code: rm -rf $WERCKER_ROOT/.git
+  after-steps:
+      - sherzberg/slack-notify:
+          subdomain: shigemk2
+          token: $SLACK_TOKEN
+          channel: "#releases"
+          username: wercker-build
+          icon_url: https://avatars3.githubusercontent.com/u/1695193?s=140
 
 publish:
   steps:
     - internal/publish-step:
         owner: shigemk2
+  after-steps:
+      - sherzberg/slack-notify:
+          subdomain: shigemk2
+          token: $SLACK_TOKEN
+          channel: "#releases"
+          username: wercker-publish
+          icon_url: https://avatars3.githubusercontent.com/u/1695193?s=140
